--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 			<form method="dialog">
 				<button id="newgame">New game</button>
 				<button id="solution">Solution</button>
+				<button>Close</button>
 			</form>
 		  </dialog>
 		  </main>
