--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 				<button id="solution">Solution</button>
 				<button>Close</button>
 			</form>
+
+			<button onclick="openFullscreen();">Fullscreen</button>
 		  </dialog>
 		  </main>
 	</body>
