--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="styles.css"> 
 		<script src="js/jquery-3.6.2.min.js"></script> 
 		<script src="js/main.js"></script>
+		<meta name="apple-mobile-web-app-capable" content="yes">
 	</head>
 	<body>
 		  <main>
